# fbrnch

./: .gitignore  .gitmodules  .stack-all  .travis.yml  CHANGELOG.md  Main.hs  Makefile  README.md  TODO  cabal.project  fbrnch.cabal  fedbrnch.cabal  stack-7.10.3.yaml  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-devel.yaml  stack-lts10.yaml  stack-lts11.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack-lts15.yaml  stack-lts16.yaml  stack-lts18.yaml  stack-lts19.yaml  stack-lts20.yaml  stack-lts21.yaml  stack-lts22.yaml  stack-lts23.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: build.yml  haskell.yml
app/: Main.hs
json/: Makefile  NewBug.hs  NewId.hs  ValidLogin.hs  result.json
src/: Bodhi.hs  Branches.hs  Bugzilla.hs  Common.hs  Fedbrnch.hs  Git.hs  InterleaveOutput.hs  Koji.hs  Krb.hs  ListReviews.hs  Main.hs  Package.hs  Pagure.hs  Patch.hs  PkgReview.hs  Prelude.hs  Prompt.hs  Repoquery.hs  RpmBuild.hs  Time.hs  Types.hs
src/Bugzilla/: Login.hs  NewId.hs  ValidLogin.hs
src/Cmd/: Autospec.hs  BranchLogs.hs  Bugs.hs  Build.hs  Bump.hs  Clone.hs  Commit.hs  Compare.hs  CompareBranches.hs  CompareTarballs.hs  Copr.hs  CreateReview.hs  Diff.hs  FTBFS.hs  Fetch.hs  Import.hs  Install.hs  ListBranches.hs  ListPackages.hs  Local.hs  Log.hs  Merge.hs  Mock.hs  Override.hs  Owner.hs  Parallel.hs  PkgReview.hs  Prep.hs  Pull.hs  PullPush.hs  Push.hs  Repoquery.hs  RequestBranch.hs  RequestRepo.hs  ReviewPackage.hs  Reviews.hs  Scratch.hs  SideTags.hs  Sort.hs  SrcDeps.hs  (+6 more)
src/Common/: System.hs  Text.hs
src/json/: invalidtoken.json  login.json
