cabal-version:       2.0
name:                fbrnch
version:             0.9.1
synopsis:            Build and create Fedora package repos and branches
description:
            fbrnch is a convenient packaging tool for Fedora Packagers,
            with integration for Bugzilla, Koji, and Bodhi.
            .
            Features include:
            .
            - merging and building a package across release branches
            .
            - automated parallel builds of sets of packages in dependency order
            .
            - creating, updating and listing one's package reviews
            .
            - requesting repos for new approved packages and branch requests
            .
            - import srpms from package reviews
            .
            - progressive copr builds
            .
            and many more commands.
homepage:            https://github.com/juhp/fbrnch
bug-reports:         https://github.com/juhp/fbrnch/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen <petersen@redhat.com>
maintainer:          Jens Petersen <petersen@fedoraproject.org>
copyright:           2019-2021 Jens Petersen
category:            Distribution
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
                     libs/bodhi-hs/LICENSE
                     libs/copr-hs/LICENSE
                     libs/fedora-dists/LICENSE
                     libs/pagure-hs/LICENSE
                     libs/pdc-hs/LICENSE
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4,
                     GHC == 8.6.5,  GHC == 8.8.4, GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/juhp/fbrnch.git

executable fbrnch
  main-is:             Main.hs
  autogen-modules:     Paths_fbrnch
  other-modules:       Bodhi
                       Branches
                       Bugzilla
                       Cmd.Bugs
                       Cmd.Build
                       Cmd.Bump
                       Cmd.Clone
                       Cmd.Commit
                       Cmd.Copr
                       Cmd.Diff
                       Cmd.Import
                       Cmd.Install
                       Cmd.ListBranches
                       Cmd.ListPackages
                       Cmd.Local
                       Cmd.Log
                       Cmd.Merge
                       Cmd.Mock
                       Cmd.Override
                       Cmd.Parallel
                       Cmd.PkgReview
                       Cmd.Pull
                       Cmd.Repoquery
                       Cmd.RequestBranch
                       Cmd.RequestRepo
                       Cmd.Reviews
                       Cmd.Scratch
                       Cmd.SideTags
                       Cmd.Sort
                       Cmd.Status
                       Cmd.Switch
                       Cmd.Update
                       Cmd.WaitRepo
                       Common
                       Common.System
                       Common.Text
                       Git
                       InterleaveOutput
                       Koji
                       Krb
                       ListReviews
                       Package
                       Pagure
                       Paths_fbrnch
                       Prompt
                       -- copr
                       Web.Fedora.Copr
                       Web.Fedora.Copr.API
                       -- fedora-dists
                       Distribution.Fedora
                       Distribution.Fedora.Branch
                       Distribution.Fedora.Products
                       Distribution.Fedora.ReadProducts
                       -- pdc
                       Fedora.PDC
                       -- bodhi
                       Fedora.Bodhi
                       -- pagure
                       Fedora.Pagure

  hs-source-dirs:      src
                       libs/copr-hs/src
                       libs/fedora-dists/src
                       libs/pdc-hs/src
                       libs/bodhi-hs/src
                       libs/pagure-hs/src
  default-language:    Haskell2010

  build-depends:       aeson,
                       async,
                       -- pretty-terminal needs 4.9:
                       base >= 4.9 && < 5,
                       -- bodhi,
                       bugzilla-redhat >= 0.3,
                       bytestring,
                       config-ini,
                       -- copr,
                       directory >= 1.2.3,
                       email-validate,
                       extra,
                       -- fedora-dists > 2.0,
                       filepath,
                       http-conduit,
                       http-directory >= 0.1.5,
                       http-query,
                       koji,
                       network-uri,
                       optparse-applicative,
                       -- pagure,
                       pretty-terminal,
                       process,
                       rpmbuild-order >= 0.4.5,
                       rpm-nvr,
                       simple-cmd >= 0.2.0,
                       simple-cmd-args >= 0.1.6,
                       text,
                       time,
                       typed-process >= 0.2.4.0,
                       utf8-string,
                       xdg-basedir,
                       -- for copr:
                       unordered-containers,
                       -- for bodhi and pagure:
                       lens,
                       lens-aeson

  if impl(ghc<8.0)
       build-depends: semigroups

  ghc-options:         -threaded
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
