cabal-version:       2.0
name:                fedbrnch
version:             0.0.0
synopsis:            Tool to update fedora packages branches
description:         Tool to update fedora packages branches
homepage:            https://github.com/juhp/fedbrnch
bug-reports:         https://github.com/juhp/fedbrnch/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@fedoraproject.org
copyright:           2019-2020 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4,
                     GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/juhp/fedbrnch.git

executable fedbrnch
  main-is:             Main.hs
  other-modules:       NewBug
  hs-source-dirs:      . json

  build-depends:       aeson
                     , base < 5
                     , basic-prelude
                     , bugzilla >= 0.2.1.2
                     , config-ini
                     , directory >= 1.2.3
                     , fedora-dists > 2.0
                     , filepath
                     , http-conduit
                     , http-directory
                     , network-uri
                     , optparse-applicative
                     , process-extras
                     , simple-cmd-args >= 0.1.4
                     , simple-cmd
                     , text
                     , xdg-basedir
  if impl(ghc<8.0)
       build-depends: semigroups

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
