cabal-version:       2.0
name:                fedbrnch
version:             0.1
synopsis:            Tool for creating and building Fedora package branches
description:
            Fed Brnch is a convenient packaging tool for Fedora Packagers,
            with integration for bugzilla, koji, and bodhi. Features include:
            - create and update package reviews and list them
            - create repo and branch requests for new approved packages
            - import srpms from package reviews
            - merge between Fedora branches and build them
            - package status command.
homepage:            https://github.com/juhp/fedbrnch
bug-reports:         https://github.com/juhp/fedbrnch/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@fedoraproject.org
copyright:           2019-2020 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4,
                     GHC == 8.6.5,  GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/fedbrnch.git

executable fedbrnch
  main-is:             Main.hs
  other-modules:       Branches
                       Bugzilla
                       Bugzilla.NewId
                       Bugzilla.ValidLogin
                       Cmd.Build
                       Cmd.Import
                       Cmd.Merge
                       Cmd.PkgReview
                       Cmd.Pull
                       Cmd.RequestBranch
                       Cmd.RequestRepo
                       Cmd.Reviews
                       Cmd.Status
                       Git
                       Koji
                       Krb
                       ListReviews
                       Package
                       Prompt
                       Types
  hs-source-dirs:      src

  build-depends:       aeson
                     , base < 5
                     , basic-prelude
                     , bugzilla >= 0.2.1.2
                     , config-ini
                     , directory >= 1.2.3
                     , fedora-dists > 2.0
                     , filepath
                     , http-conduit
                     , http-directory
                     , network-uri
                     , optparse-applicative
                     , process-extras
                     , simple-cmd-args >= 0.1.6
                     , simple-cmd
                     , text
                     , xdg-basedir
  if impl(ghc<8.0)
       build-depends: semigroups

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
